Add jquery to repo

--- a/example/index.html
+++ b/example/index.html
@@ -21,7 +21,7 @@
 		<h2><a class="slow" href="#">Slow twitch..</a></h2>
 		<h2><a class="wide" href="#">Wide twitch..</a></h2>
 		<h2><a class="ugly" href="#">Ugly twitch..</a></h2>
-		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+		<script src="jquery.js"></script>
 		<script src="../jquery.twitch.js"></script>
 		<script>
 		$(function () {
